add card, cardsdailymix and index

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,51 @@
 ---
-import Layout from '../layouts/Layout.astro';
-
+import CardsDailyMix from "../components/CardsDailyMix.astro";
+import Layout from "../layouts/Layout.astro";
+import Card from "../components/Card.astro";
 ---
 
 <Layout title="Spotify">
-	
+  <CardsDailyMix title="Se dine daily mixes" />
+  <Card
+    color="blue"
+    mix="02"
+    artists="Hund i snor, Lady Gaga"
+    imgsrc="https://picsum.photos/id/65/150/150"
+  />
+  <Card
+    color="blue"
+    mix="02"
+    artists="Hund i snor, Lady Gaga"
+    imgsrc="https://picsum.photos/id/65/150/150"
+  />
+  <Card
+    color="blue"
+    mix="02"
+    artists="Hund i snor, Lady Gaga"
+    imgsrc="https://picsum.photos/id/65/150/150"
+  />
+  <Card
+    color="blue"
+    mix="02"
+    artists="Hund i snor, Lady Gaga"
+    imgsrc="https://picsum.photos/id/65/150/150"
+  />
+  <Card
+    color="blue"
+    mix="02"
+    artists="Hund i snor, Lady Gaga"
+    imgsrc="https://picsum.photos/id/65/150/150"
+  />
+  <Card
+    color="blue"
+    mix="02"
+    artists="Hund i snor, Lady Gaga"
+    imgsrc="https://picsum.photos/id/65/150/150"
+  />
+  <Card
+    color="blue"
+    mix="02"
+    artists="Hund i snor, Lady Gaga"
+    imgsrc="https://picsum.photos/id/65/150/150"
+  />
 </Layout>
